[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/Screenshot 2024-10-08 at 16-51-51 ➡️ Right Arrow Emoji.png" type="Texture" id=1]
[ext_resource path="res://scripts/reader.gd" type="Script" id=2]
[ext_resource path="res://assets/Screenshot 2024-10-08 at 16-49-56 ⬅️ Left Arrow Emoji.png" type="Texture" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[node name="reader" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 12.0
margin_top = 11.0
margin_right = 1000.0
margin_bottom = 433.0
text = "Content"
autowrap = true
clip_text = true

[node name="left" type="Button" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -120.0
margin_right = 132.0
icon = ExtResource( 3 )
flat = true

[node name="right" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -135.0
margin_top = -127.0
icon = ExtResource( 1 )
flat = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = -3676.0
margin_top = -2325.0
margin_right = 4002.0
margin_bottom = 3123.0
custom_styles/panel = SubResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 210.0
margin_top = 487.0
margin_right = 794.0
margin_bottom = 601.0
flat = true

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
